fix(component): bug ao sair do perfil

--- a/src/app/modules/home/features/form-newsletter/form-newsletter.component.scss
+++ b/src/app/modules/home/features/form-newsletter/form-newsletter.component.scss
@@ -67,7 +67,7 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        background-color: #212121;
+        background-color: #0f0f0f;
 
         input {
             width: 100%;
@@ -78,7 +78,7 @@
             font-size: 1rem;
             font-weight: normal;
             padding: 0 10px;
-            background-color: #212121;
+            background-color: #0f0f0f;
             border-radius: 10px;
             outline: 1px solid #ffffff;
             transition: box-shadow 0.2s ease-in-out;
