--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
     <small>
-        ©{{anoAtual}} Pokémon. ©2003 - {{anoAtual}} Gustavo Inc.<br>
+        ©{{anoAtual}} Pokémon. ©2003 - {{anoAtual}} Amendoa Inc.<br>
         ©{{anoAtual}} Angular School.
     </small>
 </footer>
